@@ -153,6 +153,7 @@ t/Wikibase-Datatype-Print-Value/02-version.t
 t/Wikibase-Datatype-Print-Value/03-print.t
 t/Wikibase-Datatype-Print/01-use.t
 t/Wikibase-Datatype-Print/02-version.t
+t/Wikibase-Datatype-Print/03-print.t
 xt/Wikibase-Datatype-Print-Form/01-pod_coverage.t
 xt/Wikibase-Datatype-Print-Form/02-pod.t
 xt/Wikibase-Datatype-Print-Item/01-pod_coverage.t
