@@ -1,4 +1,6 @@
 0.16
+ - Add Wikibase::Datatype::Print::print() for all top objects like
+   Item/Lexeme/Mediainfo and Property.
  - Add link to Value::Lexeme to Wikibase::Datatype::Print.
  - Fix modules used in tests for Wikibase::Datatype::Print::Lexeme.
 
